# multimodal-medical-vqa

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py  train.py
api/: __init__.py  demo.py  main.py  schemas.py
configs/: default_config.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/diagnose/: page.tsx
frontend/src/components/: ThemeProvider.tsx  ThemeToggle.tsx
notebooks/: 01_eda.ipynb  02_baseline.ipynb  03_training.ipynb  04_analysis.ipynb
scripts/: download_vqa_rad.py
src/: __init__.py
src/data/: __init__.py  augmentation.py  loader.py  preprocessor.py
src/evaluation/: __init__.py  evaluator.py  gradcam.py  metrics.py
src/inference/: __init__.py  api_llm.py  pipeline.py  uncertainty.py
src/models/: __init__.py  confidence.py  fusion.py  language_model.py  medvqa_model.py  vision_encoder.py
src/training/: __init__.py  callbacks.py  losses.py  trainer.py
src/utils/: __init__.py  config.py  logger.py  reproducibility.py
tests/: __init__.py  test_data.py  test_inference.py  test_model.py  test_training_pipeline.py
