[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

# =============================================================================
# Black — deterministic code formatter
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py311"]
skip-magic-trailing-comma = true
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \\.mypy_cache
  | \\.ruff_cache
  | \\.tox
  | \\.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# =============================================================================
# Ruff — fast Python linter (replaces flake8, isort, pyflakes, etc.)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade (modernize Python)
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line-too-long (handled by black)
    "N802",   # function name should be lowercase (matches torch/HF conventions)
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "N815",   # class variable should be lowercase
    "UP007",  # use X | Y for union (requires Python 3.10+)
    "SIM117", # multiple with statements (sometimes clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N"]
"src/*" = [
    "N812",  # Lowercase imported as uppercase (common PyTorch aliases: F, T, A)
]

[tool.ruff.format]
preview = true

# =============================================================================
# mypy — static type checking
# =============================================================================
[tool.mypy]
python_version = 3.11
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "src.*",
    "api.*",
    "tests.*",
]
ignore_missing_imports = true

# =============================================================================
# pytest
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
